добавил зависимости в grade

--- a/buildsystem/config.gradle
+++ b/buildsystem/config.gradle
@@ -1,6 +1,6 @@
 ext {
     applicationId = "com.soutvoid.gamesproject"
-    versioncode = 1
+    versionCode = 1
     versionName = "0.0.1"
     buildToolsVersion = "25.0.0"
     minSdkVersion = 16
