--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name="com.soutvoid.gamesproject.app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,7 +15,16 @@
             android:name="io.fabric.ApiKey"
             android:value="6b5749ebdeeac0c5f3e6670361e6818564d70f78"/>
 
+        <activity
+            android:name="com.soutvoid.gamesproject.ui.MainActivity"
+            android:label="@string/title_activity_main">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
