--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:${appcompatVersion}"
     compile "com.android.support:design:${appcompatVersion}"
     compile "com.android.support:recyclerview-v7:${appcompatVersion}"
+    compile "com.android.support:cardview-v7:${appcompatVersion}"
     compile "com.android.support:palette-v7:${appcompatVersion}"
     compile "com.android.support:customtabs:${appcompatVersion}"
     compile "com.android.support:percent:${appcompatVersion}"
