--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.getkeepsafe.dexcount'
 apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
+apply plugin: 'realm-android'
 
 android {
 
@@ -161,6 +162,7 @@ dependencies {
     compile 'com.yayandroid:ParallaxRecyclerView:1.1'
     compile 'konifar:fab-transformation:1.0.0'
     compile 'com.flurry.android:analytics:6.4.2'
+    compile 'com.facebook.stetho:stetho:1.5.0'
 
     //--------------------------------- test dependencies ------------------------------------------
     //unit test
