--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     //apt
     apt "com.google.dagger:dagger-compiler:${daggerVersion}"
     apt "org.projectlombok:lombok:${lombokVersion}"
+    apt 'com.jakewharton:butterknife-compiler:8.5.1'
 
     //provided
     provided "org.projectlombok:lombok:${lombokVersion}"
@@ -120,15 +121,16 @@ dependencies {
     compile "com.android.support:palette-v7:${appcompatVersion}"
     compile "com.android.support:customtabs:${appcompatVersion}"
     compile "com.android.support:percent:${appcompatVersion}"
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "com.android.support:multidex:1.0.1"
     compile "io.reactivex:rxjava:1.1.7"
     compile "io.reactivex:rxandroid:1.2.1"
     compile "javax.inject:javax.inject:1"
-    compile "com.squareup.wire:wire-runtime:2.2.0"
     compile "com.github.bumptech.glide:glide:3.7.0"
     compile "com.annimon:stream:1.1.0"
     compile "com.jakewharton.rxbinding:rxbinding:0.4.0"
     compile "com.intellij:annotations:12.0"
+    compile 'com.jakewharton:butterknife:8.5.1'
 
     //network
     compile "com.squareup.retrofit2:retrofit:${retrofitVersion}"
@@ -152,7 +154,6 @@ dependencies {
     compile "com.google.android.gms:play-services-analytics:${playServicesVersion}"
 
     //other
-    compile "com.googlecode.libphonenumber:libphonenumber:7.0.1"
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     compile 'com.wdullaer:materialdatetimepicker:2.5.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
@@ -161,7 +162,6 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.yayandroid:ParallaxRecyclerView:1.1'
     compile 'konifar:fab-transformation:1.0.0'
-    compile 'com.flurry.android:analytics:6.4.2'
     compile 'com.facebook.stetho:stetho:1.5.0'
 
     //--------------------------------- test dependencies ------------------------------------------
@@ -183,7 +183,7 @@ dependencies {
 
     //debug
     debugCompile "com.github.brianPlummer:tinydancer:0.1.0"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
