добавлена активность для изменения и добавления подборок

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity
             android:name="com.soutvoid.gamesproject.ui.screen.personalize.PersonalizeActivityView"
             android:label="@string/personalize"/>
+
+        <activity android:name="com.soutvoid.gamesproject.ui.screen.editQuery.EditQueryActivityView"/>
     </application>
 
 </manifest>
